# audio-cpp

./: .gitignore  .naming.syle  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: clang-format-deploy.yml  linux.yml  mac.yml  windows.yml
audio-cpp/: sound.hpp
audio-cpp/drivers/: audio_context.hpp
demo/: AudioThread.hpp  CMakeLists.txt  application.cpp  conanfile.py  helper_functions.hpp
engine-audio/: audio_reader.hpp  decoder.h  helper-functions.hpp  sound.hpp
engine-audio/drivers/: audio_device.hpp
engine3d-audio/: Sound.hpp  audio_reader.hpp
src/: CMakeLists.txt
src/audio-cpp/: sound.cpp
src/engine-audio/: decoder.cpp  sound.cpp
src/engine-audio/internal/: miniaudio.cpp
src/engine3d-audio/: Sound.cpp
src/engine3d-audio/internal/: miniaudio.cpp
test_package/: Application.cpp  CMakeLists.txt
tests/: basic_audio.test.cpp  main.test.cpp
